--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "three": "^0.175.0"
   },
   "devDependencies": {
+    "@types/three": "^0.175.0",
     "jest": "^27.0.0",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.0"
   },
   "keywords": [
     "arcade",
